# FastAPI-Idade-SQL

./: README.md  pyproject.toml
SQL-Idade/: Criar contato.bru  Deleta.bru  Editar.bru  Recuperar path.bru  bruno.json
app/: main.py
